Updating Cycles Nodes via Drivers in Material View #53408

Closed
opened 2017-11-28 00:06:02 +01:00 by Alexander Mitzkus · 6 comments

System Information
OSX 10.11
2014 MacPro
and
Windows 10
intel i6700 + gtx 1070

Blender Version
OSX 2.79 official
OSX 2.79 57a0cb7

Short description of error
I build a small setup to scale and move UVs vor replacing mouthshapes in animation. This works fine in all cases.
Except when using drivers/custom Properties to manipulate the setup.

See attached video:
BugReport.mp4

Exact steps for others to reproduce the error
Play animation in attached Mouthshapes.blend in Rendered and Material view to see difference.
Mouthshapes.blend

**System Information** OSX 10.11 2014 MacPro and Windows 10 intel i6700 + gtx 1070 **Blender Version** OSX 2.79 official OSX 2.79 57a0cb7 **Short description of error** I build a small setup to scale and move UVs vor replacing mouthshapes in animation. This works fine in all cases. __Except__ when using drivers/custom Properties to manipulate the setup. See attached video: [BugReport.mp4](https://archive.blender.org/developer/F1206502/BugReport.mp4) **Exact steps for others to reproduce the error** Play animation in attached Mouthshapes.blend in Rendered and Material view to see difference. [Mouthshapes.blend](https://archive.blender.org/developer/F1206535/Mouthshapes.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zuggamasta

Added subscriber: @zuggamasta

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2017-12-04 12:25:40 +01:00

This is a limitation of current GLSL shading, which can not know about such updates. With new dependency graph it will be easier, but some work is still needed. Likely, this is perfectly aligned with development in blender2.8 branch!

One thing which needs to be fixed here, however, is that new dependency is lacking update even for rendered viewport. Working on this now!

This is a limitation of current GLSL shading, which can not know about such updates. With new dependency graph it will be easier, but some work is still needed. Likely, this is perfectly aligned with development in blender2.8 branch! One thing which needs to be fixed here, however, is that new dependency is lacking update even for rendered viewport. Working on this now!

This issue was referenced by 335343fe93

This issue was referenced by 335343fe93a9d96d293011ff263495be37ec2a62

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53408
No description provided.